fixed word wrap around img with float feature

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -97,7 +97,7 @@ body {
     color: var(--text-color);
 }
 
-.about {
+.section-header {
     background-color: var(--background-color);
     border-color: var(--background-color);
     border-bottom: 10px;
@@ -110,15 +110,19 @@ body {
     flex: auto;
 }
 
-.about h2 {
-    color: var(--text-color);
+.section-header h2 {
+    background-color: var(--background-color);
+    border-color: var(--background-color);
+    border-bottom: 10px;
+    background-size: cover;
+    background-attachment: fixed;color: var(--text-color);
     padding: 20px;
     font-size: 45px;
     flex-direction: column;
     text-align: center;
 }
 
-.about-text {
+.section-text {
     background-color: var(--text-color);
     border-color: var(--background-color);
     background-size: cover;
@@ -141,7 +145,12 @@ body {
     padding: 20px 10px;
     flex-direction: column;
     text-align: center;
+}
 
+.scottimage img {
+    display: inline-block;
+    width: 50%; 
+      
 }
 
 
@@ -187,12 +196,22 @@ body {
         padding: 20px;
     }
 
-    .about {
+    .section-header {
         justify-content: left;
+        margin: 0px 30px;
     }
 
-    .about-text div p {
+    .section-text div p {
         text-align: justify;
+        margin: 0px 30px;
+    }
+
+    .scottimage img {
+        display: inline-block;
+        margin: 25px 10px;
+        float: left; 
+        width: 19%;
+        padding-top: 0px;
     }
 }
 
@@ -224,5 +243,9 @@ body {
 
     .header nav ul li {
         font-size: 25px;
+    }
+
+    .section-header {
+        margin: 0px 0px;
     }
 }
